#18 - Avoided wrap on slider item to ensure Panels layout not to break.

--- a/app/scss/components/_sliders.scss
+++ b/app/scss/components/_sliders.scss
@@ -15,6 +15,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-wrap: nowrap;
     position: relative;
     z-index: 1;
     transition-property: transform;
